tdf#106868: fix crash when modify external link

by avoiding to dispose pImpl->m_pDialog in sc/source/ui/docshell/arealink.cxx
which corresponds to mpDialogImpl in vcl/source/window/dialog.cxx
bt1:
0  0x00007fffedb7a1f3 in Dialog::EndDialog (this=this@entry=0x55555c51b8f0, nResult=nResult@entry=1) at /home/julien/lo/libreoffice/vcl/source/window/dialog.cxx:1002
1  0x00007fffedc82f02 in OKButton::Click (this=<optimized out>) at /home/julien/lo/libreoffice/vcl/source/control/button.cxx:1724
2  0x00007fffedc7dcdf in PushButton::Tracking (this=0x55555c528600, rTEvt=...) at /home/julien/lo/libreoffice/vcl/source/control/button.cxx:1262
3  0x00007fffedc50f2f in vcl::Window::EndTracking (this=0x55555c528600, nFlags=nFlags@entry=TrackingEventFlags::NONE)
   at /home/julien/lo/libreoffice/vcl/source/window/window2.cxx:373
4  0x00007fffedc7118b in ImplHandleMouseEvent (xWindow=..., nSVEvent=nSVEvent@entry=MouseNotifyEvent::MOUSEBUTTONUP, bMouseLeave=bMouseLeave@entry=false, nX=nX@entry=341,
   nY=nY@entry=330, nMsgTime=nMsgTime@entry=62706017, nCode=1, nMode=<optimized out>) at /home/julien/lo/libreoffice/vcl/source/window/winproc.cxx:706
5  0x00007fffedc73528 in ImplHandleSalMouseButtonUp (pWindow=0x55555c51b8f0, pEvent=pEvent@entry=0x7fffffff1a70)
   at /home/julien/lo/libreoffice/vcl/source/window/winproc.cxx:2028
(gdb) p mpDialogImpl
$1 = std::unique_ptr<DialogImpl> containing 0x0

bt2:
0  Dialog::dispose (this=this@entry=0x55555c4bf250) at /home/julien/lo/libreoffice/vcl/source/window/dialog.cxx:580
1  0x00007fffbb1a978a in ScLinkedAreaDlg::dispose (this=0x55555c4bf250) at /home/julien/lo/libreoffice/sc/source/ui/miscdlgs/linkarea.cxx:78
2  0x00007fffedd6cf7a in VclReferenceBase::disposeOnce (this=<optimized out>) at /home/julien/lo/libreoffice/vcl/source/outdev/vclreferencebase.cxx:42
3  0x00007fffbb14bfea in VclPtr<ScLinkedAreaDlg>::disposeAndClear (this=this@entry=0x55555844c898) at /home/julien/lo/libreoffice/include/vcl/vclptr.hxx:227
4  0x00007fffbb14c02b in ScopedVclPtr<ScLinkedAreaDlg>::~ScopedVclPtr (this=0x55555844c898, __in_chrg=<optimized out>)
   at /home/julien/lo/libreoffice/include/vcl/vclptr.hxx:375
5  0x00007fffbb14462e in AbstractScLinkedAreaDlg_Impl::~AbstractScLinkedAreaDlg_Impl (this=this@entry=0x55555844c890, __in_chrg=<optimized out>, __vtt_parm=<optimized out>)
   at /home/julien/lo/libreoffice/sc/source/ui/attrdlg/scdlgfact.cxx:93
6  0x00007fffbb14465b in AbstractScLinkedAreaDlg_Impl::~AbstractScLinkedAreaDlg_Impl (this=0x55555844c890, __in_chrg=<optimized out>, __vtt_parm=<optimized out>)
   at /home/julien/lo/libreoffice/sc/source/ui/attrdlg/scdlgfact.cxx:93
7  0x00007fffcb80a65a in VclReferenceBase::release (this=<optimized out>) at /home/julien/lo/libreoffice/include/vcl/vclreferencebase.hxx:45
8  0x00007fffcbe75545 in rtl::Reference<AbstractScLinkedAreaDlg>::clear (this=0x555557d5c618) at /home/julien/lo/libreoffice/include/rtl/ref.hxx:157
9  0x00007fffcbe75553 in VclPtr<AbstractScLinkedAreaDlg>::clear (this=<optimized out>) at /home/julien/lo/libreoffice/include/vcl/vclptr.hxx:213
10 0x00007fffcbe750de in ScAreaLink::AreaEndEditHdl (this=0x555557c8bdb0) at /home/julien/lo/libreoffice/sc/source/ui/docshell/arealink.cxx:500
11 0x00007fffcbe7514d in ScAreaLink::LinkStubAreaEndEditHdl (instance=<optimized out>, data=...) at /home/julien/lo/libreoffice/sc/source/ui/docshell/arealink.cxx:484
12 0x00007fffedb7c0b6 in Link<Dialog&, void>::Call (this=this@entry=0x5555582139f0, data=...) at /home/julien/lo/libreoffice/include/tools/link.hxx:84
13 0x00007fffedb7a1d4 in Dialog::EndDialog (this=this@entry=0x55555c4bf250, nResult=nResult@entry=1) at /home/julien/lo/libreoffice/vcl/source/window/dialog.cxx:1001
14 0x00007fffedc82f02 in OKButton::Click (this=<optimized out>) at /home/julien/lo/libreoffice/vcl/source/control/button.cxx:1724

Change-Id: I01224172afe19923a51548a0b89b48110e131af2